assets/css/style.css
/* global css */
body{
  padding: 0;
  margin: 0;
  scroll-behavior: smooth;
}
*{
  box-sizing: border-box;
}
figure{
  padding: 0;
  margin: 0;
  line-height: 0;
}
img{
  max-width: 100%;
  max-height: 100%
}
ul,li{
  text-decoration: none;
  display: inline;
  margin: 0;
  padding: 0;
}
a{
  text-decoration: none
}
h1,h2,h3,h4,h5,h6{
  margin: 0;
  padding: 0
}
p{
  margin: 0;
  padding: 0
}
/* global css ends */

/* font face starts */
@font-face {
     font-family: 'Avenir-Light';
     src: url('../fonts/Avenir-Book.woff') format('woff'),
      url('../fonts/Avenir-Book.woff2') format('woff2');
     font-weight: normal;
     font-style: normal;
 }
 @font-face {
      font-family: 'GothamLight';
      src: url('../fonts/GothamLight.woff') format('woff');
      font-weight: normal;
      font-style: normal;
  }
/* font-face ends */

/* page wrapper */
.pageWrapper{
  position: relative;
}
/* page wrapper ends here */

/* ------------header starts here--------------- */
.header-main{
  background-color: #ebe9e7;
  opacity: 0.85;
  z-index: 2;
  position: fixed;
  top: 0;
  left:0;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: flex-end;
}
.header-container{
  width: 1550px;
  padding-top: 23px;
  padding-bottom: 16px;
  display: flex;
  align-items: center;
}
.header-main .header-container .header-nav{
  display: flex;
  flex-direction: row;
  width: 100%;
  justify-content: space-between;
  padding: 20px 0px;
  font-family: 'Avenir-Light';
}
.header-main .header-container .header-nav figure img{
  width: 300px
}
.header-main .header-container .header-nav li{
  padding-top: 19px
}
.header-main .header-container .header-nav li:nth-child(1){
  padding-left: 16px;
}
.header-main .header-container .header-nav li:nth-child(2){
  margin-right: 78px;
  padding-left: 12px
}
.header-main .header-container .header-nav li:nth-child(4){
  margin-left: 78px;
  padding-right: 12px
}
.header-main .header-container .header-nav li a{
  color: #706f6f;
  border: 1.5px solid #878787;
  width:150px;
  height: 40px;
  display: flex;
  font-size: 14px;
  font-weight: 600;
  justify-content: center;
  align-items: center;
}
.header-main .header-container .header-nav li a:hover{
  background-color: #e7e7e7;
}
  /* -----social nav (with icons)---------- */
.social-nav{
  display: flex;
  flex-direction: row;
}
.social-nav li{
  padding-left: 12px;
}
.social-nav a{
  color: white;
}
.social-nav a:hover figure{
  background-color: #575656;
}
.social-nav a figure{
  background-color: #878787;
  border-radius: 30px;
  height: 30px;
  width: 30px;
  display: flex;
  justify-content: center;
  align-items: center;
}
  /* -----social nav (with icons) ends---------- */
.h-s-nav{
  padding-left: 75px;
  padding-right: 83px
}
/* ------------header ends here--------------- */

/* ---------------content-section begins here--------------- */

/* ------------hero-banner begins here----------- */
.hero-banner{
  width: 100%;
}
.hero-banner-slider{
  max-width: 100%;
}
.hero-banner .hero-banner-slider .item{
  margin-top: -2px;
}
.hero-banner .owl-carousel .owl-dots{
  display: none;
}
/* ------------hero-banner ends here----------- */

/* ----------dream location section begins here--------- */
.dream-location{
  background-color: #f7f7f7;
  font-family: 'Avenir-Light';
}
.dream-container-top{
  display: flex;
  justify-content: flex-end;
}
.dream-location .dream-content-section{
  display: flex;
  overflow: hidden;
  width: 100%;
}
.dream-location .dream-content-section .text-section{
  width: 50%;
  padding-left: 10%;
  padding-bottom: 2%;
}
.dream-location .dream-content-section .text-section h2{
  padding: 35px 0px;
  font-weight: 400;
  font-size: 35px
}
.dream-location .dream-content-section .text-section p{
  width: 65%;
  padding-bottom: 25px;
  color: #878787;
  line-height: 1.1;
  letter-spacing: 1px;
  font-size: 20px
}
.dream-location .top-section .text-section{
  order:1
}
.dream-location .top-section .display-image{
  background-image: url(../images/image1.jpg);
  transform: skew(30deg, 0deg);
  position: absolute;
  left: -17%;
  bottom: 0%
}
.dream-location .top-section .skew-container{
  transform-origin: bottom left;
  transform: skew(-30deg, 0deg);
  width: 50%;
  display: block;
  height: inherit;
  overflow: hidden;
  order:2;
  position: relative;
}
.dream-location .dream-content-section .display-image{
  width: 100%;
  padding-bottom: 59%;
  background-repeat: no-repeat;
  background-size: cover;
}
.dream-container-bottom{
  display: flex;
  justify-content: flex-start;
  position: relative;
}
.dream-location .bottom-section .text-section{
  order:2
}
.dream-location .bottom-section .skew-container{
  transform-origin: right top;
  transform: skew(-30deg, 0deg);
  width: 50%;
  display: block;
  height: inherit;
  overflow: hidden;
  order:1;
  position: relative;
}
.dream-location .bottom-section .display-image{
  background-image: url(../images/image2.jpg);
  transform: skew(30deg, 0deg);
  position: absolute;
  right: -17%;
  top: 0%
}
/* ----------dream location section ends here----------- */

/* ---------------e-testimonials start here------------- */
.e-testimonials{
  font-family: 'Avenir-Light';
}
.container{
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 0 10%;
}
.section-heading h2{
  font-weight: 400;
  font-size: 35px;
  margin-bottom: 50px;
  margin-top: 75px;
}
.e-testimonials .testimonial-grid{
  display: flex;
  flex-wrap: wrap;
  max-width: 100%;
}
.testimonial-grid .card{
  display: flex;
  flex-direction: column;
  max-width: 33.33%;
  flex: 0 0 33.33%;
  text-align: center;
  align-items: center;
  padding-bottom: 50px;
}
.testimonial-grid .card .card-text{
  width: 65%
}
.testimonial-grid .card .card-text h3{
  font-weight: 300;
  letter-spacing: 1.1px;
  font-size: 25px;
  margin-bottom: 20px;
}
.testimonial-grid .card .card-text p{
  color: #878787;
  font-size: 18px;
}
.testimonial-grid .card figure{
  border-radius: 50%;
  width: 175px;
  height: 175px;
  margin-bottom: 35px;
}
.testimonial-grid .card figure img{
  border-radius: 50%;
  width: 175px;
  height: 175px;
}
/* ------------------e-testimonials end here-------------- */

/* ---------------------connect with us starts here------------------ */
.connect-with-us{
  background-color: #f7f7f7;
  font-family: 'Avenir-Light';

}
.section-heading{
  display: flex;
  flex-direction: column;
  align-items: center;
}
.section-heading p{
  color: #878787;
  font-size: 20px;
  width: 75%;
  text-align: center;
  letter-spacing: 1.2px;
}
.connect-with-us .connect-nav{
  width: 65%;
  justify-content: space-between;
  padding: 50px 0;
}
.connect-with-us .connect-nav a{
  display: flex;
  align-items: center;
}
.connect-with-us .connect-nav a p{
  color: black;
  padding-left: 10px;
  font-size: 13px;
}
.connect-with-us .display-grid{
  display: flex;
  flex-wrap: wrap;
  width: 70%;
  justify-content: center;
}
.display-grid .card{
  width: 25%;
  margin: 10px;
}
.display-grid .card figure img{
  width: 100%
}
.display-grid .card:nth-child(1){
  width: 43%;
  margin: 10px;
  background-color: #fff;
}
.display-grid .card:nth-child(3n+4){
  width: 43%;
  margin: 10px;
}
/* ---------------------connect with us ends here------------------ */

/* ---------------content-section ends here--------------- */

/* -------footer starts here----------- */
.footer-main{
  background-color: #f7f7f7;
  padding: 20px 0;
}
.footer-main .footer-container{
  width: 1280px;
  margin: 0 auto;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  font-family: 'GothamLight';
  font-size: 20px
}
.footer-container p{
  font-size: 30px
}
.footer-main .footer-right{
  display: flex;
  align-items: center;
}
.f-s-nav{
  padding-left: 25px;
}
/* -------footer ends here----------- */

